styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto Mono";
}

a {
    text-decoration: none;
    color: #FFFFFF;
}

li {
    list-style: none;
}

button {
    cursor: pointer;
}

*::-webkit-scrollbar {
width: 0;
}

*::-webkit-scrollbar-track {
background: transparent;
}

*::-webkit-scrollbar-thumb {
background: transparent;
border: none;
}

* {
-ms-overflow-style: none;
}

.header {
    position: fixed;
    display: flex;
    width: 100%;
    height: 70px;
    justify-content: center;
    align-items: center;
    background: #000000;
    color: #FFFFFF;
    z-index: 99;
}

.header-content {
    display: flex;
    flex-wrap: wrap;
    margin: 0 30px;
    width: 100%;
    max-width: 1170px;
    justify-content: space-between;
}

.header-title h1 {
    font-size: 2.5rem;
}

.header-content-list {
    display: flex;
    align-items: center;
}

.header-content-list li {
    padding: 2px 8px 8px;
    cursor: pointer;
    border-bottom: 2px solid #000000;
    transition: 0.3s;
}

.header-content-list li:hover {
    border-color: #949494;
    color: #00ff00;
}

.header-content-list li + li {
    margin-left: 20px;
}

.mobileNavBar {
    display: none;
}

.activeMenu {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: 100vh;
    background-color: #00ff00;
    z-index: 0;
}

.contentMobileNavBar li {
    font-size: 3rem;
}

.contentMobileNavBar li + li {
    margin-top: 30px;
}

.home-page {
    display: flex;
    width: 100%;
    min-height: 100vh;
    background-image: url('../assets/black-bg.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    justify-content: center;
    align-items: center;
}

.home-content {
    display: flex;
    flex-direction: row;
    margin: 70px  30px 40px;
    width: 100%;
    max-width: 1170px;
}

.home-text {
    width: 70%;
    color: #ffffff;
    font-size: 3.6rem;
}

.home-text span {
    display: block;
    color: #00ff00;
    font-size: 1.6rem;
}

.home-buttons {
    display: flex;
    flex-direction: column;
    width: 30%;
    justify-content: center;
    align-items: center;
}

.home-buttons button {
    color: #FFFFFF;
    width: 12rem;
    height: 3rem;
    font-size: 1rem;
    background: transparent;
    border: 2px solid;
    border-color: #FFFFFF;
    border-radius: 4px;
    transition: 0.3s;
}

.home-buttons button + button {
    margin-top: 20px;
}

.home-buttons button:hover {
    border-color: #949494;
    color: #00ff00;
}

.project-page {
    display: flex;
    width: 100%;
    justify-content: center;
    background: #FFF3F3;
}

.project-page-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1170px;
}

.header-projects-page {
    height: 8.5rem;
    align-items: center;
    text-align: center;
    padding: 2rem 0;
}

.header-projects-page p {
    margin: auto 0;
}

.slider-projects-cards {
    display: flex;
    width: 100vw;
    max-width: 1170px;
    justify-content: center;
    align-items: center;
}

.projects-content {
    display: flex; 
    max-width: 1170px;
    overflow-x: scroll;
    gap: 3rem; 
    justify-content: space-between; 
    align-content: center;
    scroll-behavior: smooth;
}

.project-card {
    width: 24rem;
    min-width: 24rem;
    height: 34rem;
    background: #FFFFFF;
    box-shadow: 0px 0px 1em #c0c0c0;
    border-radius: 5px;
    overflow: hidden;
}

.card-image {
    height: 40%;
    box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.2)
}

.card-image img {
    width: 100%;
    height: 100%;
}

.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 60%;
    padding: 20px 30px;
    
}

.card-content h1 {
    text-align: center;
    margin: 0 0 20px;
}

.card-content .card-text {
    max-height: fit-content;
    overflow: hidden;
}

.card-button {
    width: 100%;
    height: 2rem;
    margin: 20px 0;
    bottom: 0px;
    background-color: #444444;
    color: #fff;
    border: none;
    border-radius: 4px;
    transition: 0.5s;
}

.card-button:hover {
    background-color: #2b2b2b;
}

.prev, .next {
    margin: 0 20px;
    border-radius: 10px;
    background-color: #00000005;
    width: 4rem;
    height: 4rem;
    text-align: center;
    transition: 0.3s;
}

.prev img, .next img {
    width: 3rem;
    height: 3rem;  
    margin: 0.5rem; 
}

.prev:hover, .next:hover {
    background-color: #00000030;
}

.about-page {
    width: 100%;
    padding: 20px 20px 50px;
    background: #FFFFFF;
}

.header-about {
    text-align: center;
    margin: 20px 0px;
}

.header-about h2 {
    color: #00ff00;
}

.header-about h1 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

.content-about {
    width: 100%;
    max-width: 1170px;
    margin: 0 auto;
}

.text-about {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
}

.text-about div {
    width: 100%;
} 

.text-about h2 {
    margin: 20px 0;
}

.text-about p + p {
    margin-top: 1rem;
}


.text-about ul li {
    display: inline-block;
    margin: 5px;
    padding: 5px 10px;
    font-weight: 600;
    background: #e1e1e1;
    border-radius: 5px;
}

.footer {
    width: 100%;
    background-image: url('../assets/black-bg.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    padding: 20px;
}

.content-contact {
    width: 100%;
    max-width: 1170px;
    margin: 0 auto;
}

.header-contact {
    text-align: center;
    padding: 3% 0px;
    color: #FFFFFF;
}

.header-contact h2 {
    color: #00ff00;
}

.header-contact h1 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

.contacts {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    max-width: 1170px;
    color: #FFFFFF;
    align-items: center;
}

.phoneAndEmail {
    width: 50;
}

.phoneAndEmail li {
    margin: 2rem;
    padding-bottom: 0px;
}

.contacts h3 {
    margin-bottom: 1rem;
}

.socialButtons ul {
    display: flex;
}

.socialButtons ul li img {
    vertical-align: middle;
}

.socialButtons ul li + li {
    margin-left: 30px;
}

.links {
    display: flex;
    align-items: center;
}

.links p {
    margin-left: 6px;
}

@media (max-width: 820px) {

    html {
        font-size: 0.8rem;
    }

    

    .home-buttons {
        margin: 50px auto 0;
    }

    .prev , .next {
        margin: 0 5px;
        width: 2rem;
        height: 2rem;  
        display: none;      
    }
    .prev img, .next img {
        width: 1.5rem;
        height: 1.5rem;  
        margin: 0.25rem; 
    }

    .project-page {
        height: auto;
    }

    .slider-projects-cards {
        width: 100vw;
        height: auto;
    }

    .projects-content {
        width: 100vw;
        padding: 20px;
        height: auto;
        flex-wrap: wrap;
        overflow-x: hidden;
    }

    .project-card {
        margin: 4px auto;
    }

    

    .text-about div {
        width: 100%;
    } 

    .footer {
        width: 100vw;
        min-height: fit-content;
    }

    .contactsDiv {
        flex-direction: column;
        align-items: center;
        padding: 20px;
    }

    .phoneAndEmail {
        margin-bottom: 30px;
    }

}

@media (max-width: 600px) {
    .header-content-list {
        margin: 0 auto;
        
    }

    .header-content-list {
        display: none;
    }
    
    .one, .two, .three {
        background-color: #fff;
        height: 5px;
        width: 100%;
        margin: 6px auto;
        border-radius: 2px;
        transition: ease 0.5s ;
    }
    
    .section-menu {
        width: 40px;
        height: 30px;
    }
    
    .section-menu.on .one{
        transform: rotate(45deg) translate(8px, 7px);
    }
    .section-menu.on .two{
        opacity: 0;
    }
    .section-menu.on .three{
        transform: rotate(-45deg) translate(9px, -7.5px);
    }

    .home-text {
        font-size: 2.5rem;
    }

    .home-content {
        flex-direction: column;
    }

    .card-content h1 {
        font-size: 1.4rem;
        margin: 0 0 5px;
    }

    .socialButtons ul li + li {
        margin-left: 15px;
    }

}

@media (max-width: 340px) {
    
    .project-card {
        width: 20rem;
        min-width: 20rem;
        height: 30rem;
        margin: 10 auto;
    }

    .card-content {
        padding: 20px 15px;
    }

    .links p{
        display: none;
    }
}

